metallb-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metallb
  name: metallb-webhook
  namespace: metallb-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metallb
      component: webhook
  template:
    metadata:
      labels:
        app: metallb
        component: webhook
    spec:
      containers:
        - name: webhook
          image: quay.io/metallb/webhook:v0.13.7
          ports:
            - containerPort: 9443
              name: webhook
          volumeMounts:
            - mountPath: /certs
              name: webhook-certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: webhook-server-cert
